# demo_cpp

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: conan_config.cmake  grpc_generate.cmake
proto/: api.proto
src/client/: main.cpp  remotedict.cpp
src/client/include/: remotedict.h
src/server/: dictionary.cpp  dictionary.h  main.cpp
tests/benchmark/: dictionary_benchmark.cpp
tests/unit/: dictionary_test.cpp
